Add Native Library Names constant class

--- a/docfx/THNETII.WinApi.DocFx/THNETII.WinApi.DocFx.csproj
+++ b/docfx/THNETII.WinApi.DocFx/THNETII.WinApi.DocFx.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src-native\THNETII.WinApiNative.LibraryNames\THNETII.WinApiNative.LibraryNames.csproj" />
     <ProjectReference Include="..\..\src\THNETII.WindowsProtocols.WindowsErrorCodes\THNETII.WindowsProtocols.WindowsErrorCodes.csproj" />
     <ProjectReference Include="..\..\src\THNETII.WindowsProtocols.WindowsErrorCodes.Constants\THNETII.WindowsProtocols.WindowsErrorCodes.Constants.csproj" />
   </ItemGroup>
