Error Handling: Beep Function

--- a/docfx/THNETII.WinApi.DocFx/THNETII.WinApi.DocFx.csproj
+++ b/docfx/THNETII.WinApi.DocFx/THNETII.WinApi.DocFx.csproj
@@ -14,9 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Bitwise\THNETII.InteropServices.Bitwise.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\..\src-native\THNETII.WinApiNative.ErrorHandling\THNETII.WinApiNative.ErrorHandling.csproj" />
     <ProjectReference Include="..\..\src-native\THNETII.WinApiNative.LibraryNames\THNETII.WinApiNative.LibraryNames.csproj" />
     <ProjectReference Include="..\..\src\THNETII.WindowsProtocols.WindowsErrorCodes\THNETII.WindowsProtocols.WindowsErrorCodes.csproj" />
     <ProjectReference Include="..\..\src\THNETII.WindowsProtocols.WindowsErrorCodes.Constants\THNETII.WindowsProtocols.WindowsErrorCodes.Constants.csproj" />
