--- a/src-native/THNETII.WinApiNative.ErrorHandling/THNETII.WinApiNative.ErrorHandling.csproj
+++ b/src-native/THNETII.WinApiNative.ErrorHandling/THNETII.WinApiNative.ErrorHandling.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\THNETII.WinApiNative.LibraryNames\THNETII.WinApiNative.LibraryNames.csproj">
+      <PrivateAssets>All</PrivateAssets>
+    </ProjectReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\THNETII.WindowsProtocols.WindowsErrorCodes.Constants\THNETII.WindowsProtocols.WindowsErrorCodes.Constants.csproj">
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
