--- a/test/THNETII.WinApi.Native.Test/THNETII.WinApi.Native.Test.csproj
+++ b/test/THNETII.WinApi.Native.Test/THNETII.WinApi.Native.Test.csproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <LangVersion>7.2</LangVersion>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>THNETII.WinApiNative</RootNamespace>
     <IsPackable>false</IsPackable>
