Error Handling: FormatMessage function

--- a/src-native/THNETII.WinApiNative.ErrorHandling/THNETII.WinApiNative.ErrorHandling.csproj
+++ b/src-native/THNETII.WinApiNative.ErrorHandling/THNETII.WinApiNative.ErrorHandling.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Bitwise\THNETII.InteropServices.Bitwise.csproj" />
     <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.NativeMemory\THNETII.InteropServices.NativeMemory.csproj" />
   </ItemGroup>
 
