Fixes and unit tests for Windows Error Codes

--- a/test/THNETII.WinApi.Test/THNETII.WinApi.Test.csproj
+++ b/test/THNETII.WinApi.Test/THNETII.WinApi.Test.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\THNETII.WindowsProtocols.WindowsErrorCodes.Constants\THNETII.WindowsProtocols.WindowsErrorCodes.Constants.csproj" />
+    <ProjectReference Include="..\..\src\THNETII.WindowsProtocols.WindowsErrorCodes\THNETII.WindowsProtocols.WindowsErrorCodes.csproj" />
+  </ItemGroup>
+
 </Project>
