https://github.com/thnetii/dotnet-common/commit/9dd574d92299709d98f1d605ea1c9f579457cfb0

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,6 +6,9 @@
     <Company>TH-NETII Rasch Solutions</Company>
     <Copyright>Written by Fredrik Høisæther Rasch, $([System.DateTime]::Now.Year)</Copyright>
   </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework Condition="'$(BuildDefaultTargetFramework)'!=''">netstandard2.0</TargetFramework>
+  </PropertyGroup>
   <PropertyGroup Label="Repository Metadata">
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/thnetii/windows-api.git</RepositoryUrl>
