Update DocFx for GitHub Pages

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = interopservices
 	branch = vs2017
 	url = https://github.com/thnetii/interopservices.git
+[submodule "gh-pages-deploy"]
+	path = gh-pages-deploy
+	url = https://github.com/thnetii/docs.git
+	branch = deploy
