WinAPI Native function declarations are part of a header

--- a/src/THNETII.WinApi.Constants.NTStatus/THNETII.WinApi.Constants.NTStatus.csproj
+++ b/src/THNETII.WinApi.Constants.NTStatus/THNETII.WinApi.Constants.NTStatus.csproj
@@ -10,9 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\THNETII.WinApi.Constants.WinNT\THNETII.WinApi.Constants.WinNT.csproj">
+    <ProjectReference Include="..\..\src\THNETII.WinApi.Headers.WinNT\THNETII.WinApi.Headers.WinNT.csproj">
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
-  </ItemGroup>
+  </ItemGroup>  
 
 </Project>
