--- a/src/THNETII.WinApi.Headers.UtilApiset/THNETII.WinApi.Headers.UtilApiset.csproj
+++ b/src/THNETII.WinApi.Headers.UtilApiset/THNETII.WinApi.Headers.UtilApiset.csproj
@@ -6,10 +6,11 @@
     <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>CS1591</NoWarn>
-    <RootNamespace>THNETII.WinApi.Native.WinUser</RootNamespace>
+    <RootNamespace>THNETII.WinApi.Native.UtilApiset</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Bitwise\THNETII.InteropServices.Bitwise.csproj" />
     <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.NativeMemory\THNETII.InteropServices.NativeMemory.csproj" />
   </ItemGroup>
 
@@ -18,5 +19,5 @@
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
   </ItemGroup>
-  
+
 </Project>
