--- a/src/THNETII.WinApi.Headers.ErrHandlingApi/THNETII.WinApi.Headers.ErrHandlingApi.csproj
+++ b/src/THNETII.WinApi.Headers.ErrHandlingApi/THNETII.WinApi.Headers.ErrHandlingApi.csproj
@@ -5,28 +5,22 @@
     <LangVersion>7.2</LangVersion>
     <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <RootNamespace>THNETII.WinApi.Native.ErrorHandling</RootNamespace>
+    <NoWarn>CS1591</NoWarn>
+    <RootNamespace>THNETII.WinApi.Native.ErrHandlingApi</RootNamespace>
   </PropertyGroup>
 
+  <!--
   <ItemGroup>
+    <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Bitwise\THNETII.InteropServices.Bitwise.csproj" />
     <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.NativeMemory\THNETII.InteropServices.NativeMemory.csproj" />
   </ItemGroup>
+  -->
 
   <ItemGroup>
     <ProjectReference Include="..\..\src-shared\THNETII.WinApi.NativeLibraryNames\THNETII.WinApi.NativeLibraryNames.csproj">
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\THNETII.WinApi.Constants.WinError\THNETII.WinApi.Constants.WinError.csproj">
-      <PrivateAssets>All</PrivateAssets>
-    </ProjectReference>
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\THNETII.WinApi.Headers.WinBase\THNETII.WinApi.Headers.WinBase.csproj" />
-    <ProjectReference Include="..\THNETII.WinApi.Headers.WinUser\THNETII.WinApi.Headers.WinUser.csproj" />
   </ItemGroup>
 
 </Project>
