--- a/src/THNETII.WinApi.Headers.MinWinBase/THNETII.WinApi.Headers.MinWinBase.csproj
+++ b/src/THNETII.WinApi.Headers.MinWinBase/THNETII.WinApi.Headers.MinWinBase.csproj
@@ -20,6 +20,9 @@
     <ProjectReference Include="..\..\src-shared\THNETII.WinApi.NativeLibraryNames\THNETII.WinApi.NativeLibraryNames.csproj">
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
+    <ProjectReference Include="..\THNETII.WinApi.Constants.NTStatus\THNETII.WinApi.Constants.NTStatus.csproj">
+      <PrivateAssets>All</PrivateAssets>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
