--- a/src/THNETII.WinApi.Constants.WinNT/THNETII.WinApi.Constants.WinNT.csproj
+++ b/src/THNETII.WinApi.Constants.WinNT/THNETII.WinApi.Constants.WinNT.csproj
@@ -6,13 +6,7 @@
     <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>CS1591</NoWarn>
-    <RootNamespace>THNETII.WinApi.Native.NTStatus</RootNamespace>
+    <RootNamespace>THNETII.WinApi.Native.WinNT</RootNamespace>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\THNETII.WinApi.Constants.WinNT\THNETII.WinApi.Constants.WinNT.csproj">
-      <PrivateAssets>All</PrivateAssets>
-    </ProjectReference>
-  </ItemGroup>  
 
 </Project>
