ByValArrays in structs use Span<T>

--- a/src/THNETII.WinApi.Headers.WinNT/THNETII.WinApi.Headers.WinNT.csproj
+++ b/src/THNETII.WinApi.Headers.WinNT/THNETII.WinApi.Headers.WinNT.csproj
@@ -3,15 +3,17 @@
 
   <PropertyGroup>
     <LangVersion>7.2</LangVersion>
-    <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard1.6;netstandard2.0</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>CS1591</NoWarn>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <RootNamespace>THNETII.WinApi.Native.WinNT</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Bitwise\THNETII.InteropServices.Bitwise.csproj" />
     <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.NativeMemory\THNETII.InteropServices.NativeMemory.csproj" />
+    <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Runtime\THNETII.InteropServices.Runtime.csproj" />
   </ItemGroup>
 
   <ItemGroup>
