--- a/src/THNETII.WinApi.Constants.WinNT/THNETII.WinApi.Constants.WinNT.csproj
+++ b/src/THNETII.WinApi.Constants.WinNT/THNETII.WinApi.Constants.WinNT.csproj
@@ -9,4 +9,11 @@
     <RootNamespace>THNETII.WinApi.Native.WinNT</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.5.2" />
+    <PackageReference Include="System.Security.Principal.Windows" Version="4.5.1">
+      <PrivateAssets>All</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
