OBJECT_TYPE_LIST

--- a/test/THNETII.WinApi.Native.Test/THNETII.WinApi.Native.Test.csproj
+++ b/test/THNETII.WinApi.Native.Test/THNETII.WinApi.Native.Test.csproj
@@ -3,6 +3,7 @@
 
   <PropertyGroup>
     <LangVersion>7.2</LangVersion>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>THNETII.WinApi.Native</RootNamespace>
     <IsPackable>false</IsPackable>
