TOKEN_LINKED_TOKEN structure

--- a/src/THNETII.WinApi.Constants.WinNT/THNETII.WinApi.Constants.WinNT.csproj
+++ b/src/THNETII.WinApi.Constants.WinNT/THNETII.WinApi.Constants.WinNT.csproj
@@ -16,4 +16,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\THNETII.WinApi.Headers.HandleApi\THNETII.WinApi.Headers.HandleApi.csproj" />
+  </ItemGroup>
+
 </Project>
