Use PWSTR instead of char* or IntPtr

--- a/src/THNETII.WinApi.Headers.WinNT/THNETII.WinApi.Headers.WinNT.csproj
+++ b/src/THNETII.WinApi.Headers.WinNT/THNETII.WinApi.Headers.WinNT.csproj
@@ -33,6 +33,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\THNETII.WinApi.Constants.WinNT\THNETII.WinApi.Constants.WinNT.csproj" />
+    <ProjectReference Include="..\..\src-shared\THNETII.WinApi.WindowsDataTypes\THNETII.WinApi.WindowsDataTypes.csproj" />
   </ItemGroup>
 
   <ItemGroup>
