CompareObjectHandles, GetHandleInformation and SetHandleInformation functions

--- a/src/THNETII.WinApi.Headers.HandleApi/THNETII.WinApi.Headers.HandleApi.csproj
+++ b/src/THNETII.WinApi.Headers.HandleApi/THNETII.WinApi.Headers.HandleApi.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\THNETII.WinApi.Headers.WinNT\THNETII.WinApi.Headers.WinNT.csproj" />
+    <ProjectReference Include="..\THNETII.WinApi.Headers.WinBase\THNETII.WinApi.Headers.WinBase.csproj" />
   </ItemGroup>
 
 </Project>
