--- a/src/THNETII.WinApi.Headers.WinError/THNETII.WinApi.Headers.WinError.csproj
+++ b/src/THNETII.WinApi.Headers.WinError/THNETII.WinApi.Headers.WinError.csproj
@@ -9,4 +9,10 @@
     <RootNamespace>THNETII.WinApi.Native.WinError</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\THNETII.WinApi.Constants.WinError\THNETII.WinApi.Constants.WinError.csproj">
+      <PrivateAssets>All</PrivateAssets>
+    </ProjectReference>
+  </ItemGroup>
+
 </Project>
