Move WinBase constants to its own project

--- a/src/THNETII.WinApi.Headers.WinBase/THNETII.WinApi.Headers.WinBase.csproj
+++ b/src/THNETII.WinApi.Headers.WinBase/THNETII.WinApi.Headers.WinBase.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
   
   <ItemGroup Label="Constants Project References">
+    <ProjectReference Include="..\..\src\THNETII.WinApi.Constants.WinBase\THNETII.WinApi.Constants.WinBase.csproj">
+      <PrivateAssets>All</PrivateAssets>
+    </ProjectReference>
     <ProjectReference Include="..\..\src\THNETII.WinApi.Constants.WinError\THNETII.WinApi.Constants.WinError.csproj">
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
