--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "interopservices"]
 	path = interopservices
 	url = https://github.com/thnetii/interopservices.git
+[submodule "win-sdk-inc"]
+	path = win-sdk-inc
+	url = https://github.com/thnetii/win-sdk-inc.git
