Update usage of THNETII.InteropServices projects

--- a/src-shared/THNETII.WinApi.WindowsDataTypes/THNETII.WinApi.WindowsDataTypes.csproj
+++ b/src-shared/THNETII.WinApi.WindowsDataTypes/THNETII.WinApi.WindowsDataTypes.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.NativeMemory\THNETII.InteropServices.NativeMemory.csproj" />
+    <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Memory\THNETII.InteropServices.Memory.csproj" />
   </ItemGroup>
 
 </Project>
