--- a/src/THNETII.WinApi.Headers.UtilApiset/THNETII.WinApi.Headers.UtilApiset.csproj
+++ b/src/THNETII.WinApi.Headers.UtilApiset/THNETII.WinApi.Headers.UtilApiset.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Bitwise\THNETII.InteropServices.Bitwise.csproj" />
-    <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.NativeMemory\THNETII.InteropServices.NativeMemory.csproj" />
+    <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Memory\THNETII.InteropServices.Memory.csproj" />
   </ItemGroup>
 
   <ItemGroup>
