--- a/src/THNETII.WinApi.Headers.WinNT/THNETII.WinApi.Headers.WinNT.csproj
+++ b/src/THNETII.WinApi.Headers.WinNT/THNETII.WinApi.Headers.WinNT.csproj
@@ -12,8 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Bitwise\THNETII.InteropServices.Bitwise.csproj" />
-    <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.NativeMemory\THNETII.InteropServices.NativeMemory.csproj" />
-    <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Runtime\THNETII.InteropServices.Runtime.csproj" />
+    <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Memory\THNETII.InteropServices.Memory.csproj" />
   </ItemGroup>
 
   <ItemGroup>
