--- a/src/THNETII.WinApi.Headers.WinUser/THNETII.WinApi.Headers.WinUser.csproj
+++ b/src/THNETII.WinApi.Headers.WinUser/THNETII.WinApi.Headers.WinUser.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.NativeMemory\THNETII.InteropServices.NativeMemory.csproj" />
+    <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Memory\THNETII.InteropServices.Memory.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,5 +18,5 @@
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
   </ItemGroup>
-  
+
 </Project>
