Add Read/Write Bool Bitfield extension methods

--- a/src-shared/THNETII.WinApi.ErrorCodes/THNETII.WinApi.ErrorCodes.csproj
+++ b/src-shared/THNETII.WinApi.ErrorCodes/THNETII.WinApi.ErrorCodes.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\..\src\THNETII.WinApi.Constants.NTStatus\THNETII.WinApi.Constants.NTStatus.csproj">
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
+    <ProjectReference Include="..\THNETII.WinApi.Helpers\THNETII.WinApi.Helpers.csproj" />
   </ItemGroup>
 
 </Project>
