--- a/src/THNETII.WinApi.Headers.MinWinBase/THNETII.WinApi.Headers.MinWinBase.csproj
+++ b/src/THNETII.WinApi.Headers.MinWinBase/THNETII.WinApi.Headers.MinWinBase.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\interopservices\src\THNETII.InteropServices.Bitwise\THNETII.InteropServices.Bitwise.csproj" />
+    <ProjectReference Include="..\..\src-shared\THNETII.WinApi.Helpers\THNETII.WinApi.Helpers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
