--- a/src/THNETII.WinApi.Headers.MinWinBase/THNETII.WinApi.Headers.MinWinBase.csproj
+++ b/src/THNETII.WinApi.Headers.MinWinBase/THNETII.WinApi.Headers.MinWinBase.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\..\src-shared\THNETII.WinApi.NativeLibraryNames\THNETII.WinApi.NativeLibraryNames.csproj">
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
+    <ProjectReference Include="..\..\src-shared\THNETII.WinApi.WindowsDataTypes\THNETII.WinApi.WindowsDataTypes.csproj" />
     <ProjectReference Include="..\THNETII.WinApi.Constants.NTStatus\THNETII.WinApi.Constants.NTStatus.csproj">
       <PrivateAssets>All</PrivateAssets>
     </ProjectReference>
